Change overflow to prevent team display bug

--- a/css/shared/grid.less
+++ b/css/shared/grid.less
@@ -39,7 +39,7 @@
   .clearfix;
   width: 960px;
   margin: 0 auto;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .row(@columns:@columns) {
